Updates made to HTML.

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <!-- Add Jumbotron to Header -->
-      <div class="jumbotron text-center" style = "background-color: rgb(228, 30, 47) !important;">
+      <div class="jumbotron text-center">
         <h1><strong>Mission to Mars</strong></h1>
         <!-- Add a button to activate scraping script -->
         <p><a class="btn btn-danger btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
@@ -25,7 +25,7 @@
         <div class="col-md-12">
           <div class="media">
             <div class="media-body">
-              <h2><strong class="text-danger">Latest Mars News</strong></h2>
+              <h2><strong>Latest Mars News</strong></h2>
               <h4 class="media-heading">{{ mars.news_title }}</h4>
               <p>{{ mars.news_paragraph }}</p>
             </div>
